correction z-index loader

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -578,7 +578,8 @@ width: 100%;
 
 .fondu-out {
   opacity: 0;
-  transition: opacity 0.4s ease-out;
+  transition: opacity 1s ease-out;
+  z-index: -999;
 }
 
 
